<?xml version="1.0" encoding="UTF-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".TradeScreen">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/outdatedAlert"
              android:background="#cc0000"
              android:textColor="#ffffff"
              android:text="@string/outdated_database_label"/>
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="0dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:id="@+id/addTheir"
                    android:src="@drawable/add"
                    android:background="@null"
                    android:contentDescription="@string/add_their_card"/>
            <TextView
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/their_cards_label"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="80dp" android:layout_height="wrap_content"
                    android:id="@+id/theirValue"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:gravity="end|center_vertical"/>
        </LinearLayout>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/theirCards"
                android:background="@drawable/list_background_shape"
                android:padding="2dp"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/priceResult"
                android:layout_weight="1"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/store_trade_button_label"
                android:layout_gravity="end"
                android:gravity="end"
                style="@style/SmallButton"
                android:id="@+id/storeTrade"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent" android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="0dp"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitCenter"
                    android:id="@+id/addMine"
                    android:src="@drawable/add"
                    android:background="@null"
                    android:contentDescription="@string/add_my_card"/>
            <TextView
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/my_cards_label"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="80dp" android:layout_height="wrap_content"
                    android:id="@+id/myValue"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:gravity="end|center_vertical"/>
        </LinearLayout>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/myCards"
                android:background="@drawable/list_background_shape"
                android:padding="2dp"
        />
    </LinearLayout>
</LinearLayout>
